--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,18 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Chilanka&display=swap" rel="stylesheet">
+    <!-- Unifraktur maguntia, Uncial antiqua, Fondamento (!), Pirata One,
+        Medieval sharp(!), Unifraktur cook, Bokor, Fleur de leah -->
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=MedievalSharp:300,400,500,700&display=swap"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
