--- a/public/index.html
+++ b/public/index.html
@@ -13,21 +13,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <!-- Unifraktur maguntia, Uncial antiqua, Fondamento (!), Pirata One,
-        Medieval sharp(!), Unifraktur cook, Bokor, Fleur de leah -->
-
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=MedievalSharp:300,400,500,700&display=swap"
-    />
-
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Cinzel+Decorative:wght@400;700&family=IM+Fell+Double+Pica&family=MedievalSharp&display=swap');
+    </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
